[tool.poetry]
name = "pyimage overlay"
version = "0.1.0"
description = "Overlay text onto images with smart sizing"
authors = ["Jay Miller <kjaymiller@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
